# SimPO

./: .gitignore  justfile  pyproject.toml  upload.ipynb
training_configs/: llama-3-2-1b-base-sft.yaml  llama-3-2-3b-base-sft.yaml
