[tool.poetry]
name = "simpo"
version = "0.1.0"
description = ""
authors = ["wassname <1103714+wassname@users.noreply.github.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = ">=2.1.2+cu121", source = "pytorch" }
accelerate = ">=0.29.2"
bitsandbytes = ">=0.43.0"
einops = ">=0.6.1"
evaluate = "0.4.0"
datasets = ">=2.18.0"
deepspeed = ">=0.14.4"
hf_transfer = ">=0.1.4"
huggingface-hub = ">=0.19.2,<1.0"
jinja2 = ">=3.0.0"
ninja = ">=1.11.1"
numpy = ">=1.24.2"
packaging = ">=23.0"
peft = ">=0.9.0"
protobuf = "<=3.20.2"
safetensors = ">=0.3.3"
sentencepiece = ">=0.1.99"
scipy = "*"
tensorboard = "*"
tqdm = ">=4.64.1"
transformers = ">=4.39.3"
trl = ">=0.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "*"
parameterized = ">=0.9.0"
black = ">=24.4.2"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
hf-doc-builder = ">=0.4.0"

[virtualenvs]
in-project = true
