[tool.poetry]
name = "simpo"
version = "0.1.0"
description = ""
authors = ["wassname <1103714+wassname@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10.9,<4.0"
torch = { version = ">=2.1.2+cu121", source = "pytorch" }
alignment-handbook = {git = "https://github.com/huggingface/alignment-handbook.git"}
#huggingface-hub = "~0.23.0"
# trl = "~0.9.0"
deepspeed = "^0.14"
# transformers="~4.39.3"
# python -m pip install flash-attn --no-build-isolation

[tool.poetry.group.dev.dependencies]
pytest = "*"

[virtualenvs]
in-project = true
